--- a/Munching Food/index.html
+++ b/Munching Food/index.html
@@ -79,53 +79,205 @@
     </header>
     <!-- Header Ends Here! -->
     <main>
-      <div id="ImageSlider">
-        <h1>
-          Try our
-          <b style="font-family: cursive">AMAZING</b>
-          Recipies!
-        </h1>
-      </div>
-      <h2>Different Styles combined together!</h2>
-      <div id="Cards">
-        <div class="MyCard">
-          <h3>My Card Heading!</h3>
-          <div class="CardContent">Lorem ipsum dolor sit amet.</div>
+      <section id="SecImgSlider">
+        <div id="ImageSlider">
+          <h1>
+            Try our
+            <b style="font-family: cursive">AMAZING</b>
+            Recipes!
+          </h1>
         </div>
-        <div class="MyCard">
-          <h3>My Card Heading!</h3>
-          <div class="CardContent">Lorem ipsum dolor sit amet.</div>
+      </section>
+      <!-- Slider Ends Here! -->
+      <section id="SecCards">
+        <h2>Taste of 12+ Traditional Recipe Styles!</h2>
+        <div id="Cards">
+          <div class="MyCard">
+            <h3>Italian Punch</h3>
+            <div id="C1" class="CardBgImg"></div>
+            <div class="CardContent">
+              <h4>Caution: Spicy</h4>
+              <hr style="margin: 3px" />
+
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Veritatis blanditiis autem illum. Natus fuga corrupti quidem ab
+                optio, iusto nisi!
+              </p>
+            </div>
+            <button class="CardBtn"><b>Explore!</b></button>
+          </div>
+          <div class="MyCard">
+            <h3>Swedish Kick</h3>
+            <div id="C2" class="CardBgImg"></div>
+            <div class="CardContent">
+              <h4>Caution: Spicy</h4>
+              <hr style="margin: 3px" />
+
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Veritatis blanditiis autem illum. Natus fuga corrupti quidem ab
+                optio, iusto nisi!
+              </p>
+            </div>
+            <button class="CardBtn"><b>Explore!</b></button>
+          </div>
+          <div class="MyCard">
+            <h3>Pakistani Slap</h3>
+            <div id="C3" class="CardBgImg"></div>
+            <div class="CardContent">
+              <h4>Caution: Spicy</h4>
+              <hr style="margin: 3px" />
+
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Veritatis blanditiis autem illum. Natus fuga corrupti quidem ab
+                optio, iusto nisi!
+              </p>
+            </div>
+            <button class="CardBtn"><b>Explore!</b></button>
+          </div>
+          <div class="MyCard">
+            <h3>Russian Elbow</h3>
+            <div id="C4" class="CardBgImg"></div>
+            <div class="CardContent">
+              <h4>Caution: Spicy</h4>
+              <hr style="margin: 3px" />
+
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Veritatis blanditiis autem illum. Natus fuga corrupti quidem ab
+                optio, iusto nisi!
+              </p>
+            </div>
+            <button class="CardBtn"><b>Explore!</b></button>
+          </div>
+          <div class="MyCard">
+            <h3>Chinese Side-Kick</h3>
+            <div id="C5" class="CardBgImg"></div>
+            <div class="CardContent">
+              <h4>Caution: Spicy</h4>
+              <hr style="margin: 3px" />
+
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Veritatis blanditiis autem illum. Natus fuga corrupti quidem ab
+                optio, iusto nisi!
+              </p>
+            </div>
+            <button class="CardBtn"><b>Explore!</b></button>
+          </div>
+          <div class="MyCard">
+            <h3>Mexican Hammer</h3>
+            <div id="C6" class="CardBgImg"></div>
+            <div class="CardContent">
+              <h4>Caution: Spicy</h4>
+              <hr style="margin: 3px" />
+
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Veritatis blanditiis autem illum. Natus fuga corrupti quidem ab
+                optio, iusto nisi!
+              </p>
+            </div>
+            <button class="CardBtn"><b>Explore!</b></button>
+          </div>
+          <div class="MyCard">
+            <h3>American Jab</h3>
+            <div id="C7" class="CardBgImg"></div>
+            <div class="CardContent">
+              <h4>Caution: Spicy</h4>
+              <hr style="margin: 3px" />
+
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Veritatis blanditiis autem illum. Natus fuga corrupti quidem ab
+                optio, iusto nisi!
+              </p>
+            </div>
+            <button class="CardBtn"><b>Explore!</b></button>
+          </div>
+          <div class="MyCard">
+            <h3>German Choc</h3>
+            <div id="C8" class="CardBgImg"></div>
+            <div class="CardContent">
+              <h4>Caution: Spicy</h4>
+              <hr style="margin: 3px" />
+
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Veritatis blanditiis autem illum. Natus fuga corrupti quidem ab
+                optio, iusto nisi!
+              </p>
+            </div>
+            <button class="CardBtn"><b>Explore!</b></button>
+          </div>
+          <div class="MyCard">
+            <h3>Indian Curry</h3>
+            <div id="C9" class="CardBgImg"></div>
+            <div class="CardContent">
+              <h4>Caution: Spicy</h4>
+              <hr style="margin: 3px" />
+
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Veritatis blanditiis autem illum. Natus fuga corrupti quidem ab
+                optio, iusto nisi!
+              </p>
+            </div>
+            <button class="CardBtn"><b>Explore!</b></button>
+          </div>
+          <div class="MyCard">
+            <h3>Japanese Umo</h3>
+            <div id="C10" class="CardBgImg"></div>
+            <div class="CardContent">
+              <h4>Caution: Spicy</h4>
+              <hr style="margin: 3px" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Veritatis blanditiis autem illum. Natus fuga corrupti quidem ab
+                optio, iusto nisi!
+              </p>
+            </div>
+            <button class="CardBtn"><b>Explore!</b></button>
+          </div>
+          <div class="MyCard">
+            <h3>African Cutsu</h3>
+            <div id="C11" class="CardBgImg"></div>
+            <div class="CardContent">
+              <h4>Caution: Spicy</h4>
+              <hr style="margin: 3px" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Veritatis blanditiis autem illum. Natus fuga corrupti quidem ab
+                optio, iusto nisi!
+              </p>
+            </div>
+            <button class="CardBtn"><b>Explore!</b></button>
+          </div>
+          <div class="MyCard">
+            <h3>Bengali Fish</h3>
+            <div id="C12" class="CardBgImg"></div>
+            <div class="CardContent">
+              <h4>Caution: Spicy</h4>
+              <hr style="margin: 3px" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Veritatis blanditiis autem illum. Natus fuga corrupti quidem ab
+                optio, iusto nisi!
+              </p>
+            </div>
+            <button class="CardBtn"><b>Explore!</b></button>
+          </div>
         </div>
-        <div class="MyCard">
-          <h3>My Card Heading!</h3>
-          <div class="CardContent">Lorem ipsum dolor sit amet.</div>
-        </div>
-        <div class="MyCard">
-          <h3>My Card Heading!</h3>
-          <div class="CardContent">Lorem ipsum dolor sit amet.</div>
-        </div>
-        <div class="MyCard">
-          <h3>My Card Heading!</h3>
-          <div class="CardContent">Lorem ipsum dolor sit amet.</div>
-        </div>
-        <div class="MyCard">
-          <h3>My Card Heading!</h3>
-          <div class="CardContent">Lorem ipsum dolor sit amet.</div>
-        </div>
-        <div class="MyCard">
-          <h3>My Card Heading!</h3>
-          <div class="CardContent">Lorem ipsum dolor sit amet.</div>
-        </div>
-        <div class="MyCard">
-          <h3>My Card Heading!</h3>
-          <div class="CardContent">Lorem ipsum dolor sit amet.</div>
-        </div>
-        <div class="MyCard">
-          <h3>My Card Heading!</h3>
-          <div class="CardContent">Lorem ipsum dolor sit amet.</div>
-        </div>
-        <div class="MyCard">My Card 10</div>
-      </div>
+      </section>
+      <section id="SecChefs">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed culpa
+        explicabo, quo inventore voluptatum quam, quos quaerat mollitia possimus
+        fugit quasi totam accusamus tempora a hic! Nulla cupiditate sequi
+        ratione.
+      </section>
+      <!-- Cards End Here! -->
     </main>
     <!-- Main content Ends Here! -->
 
