--- a/Munching Food/index.html
+++ b/Munching Food/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="shortcut icon"
-      href="/Resources/Content Resources/MunchingFood.png"
+      href="Resources/ContentResources/MunchingFood.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="/Resources/Style.css" />
-    <link rel="stylesheet" href="/Resources/MediumSC.css" />
-    <link rel="stylesheet" href="/Resources/SmallSC.css" />
-    <script src="/Resources/Function.js"></script>
+    <link rel="stylesheet" href="Resources/Style.css" />
+    <link rel="stylesheet" href="Resources/MediumSC.css" />
+    <link rel="stylesheet" href="Resources/SmallSC.css" />
+    <script src="Resources/Function.js"></script>
 
     <title>Munching Food | We love to Eat!</title>
     <style>
@@ -23,7 +23,7 @@
         align-items: center;
         width: 100%;
         height: 70vh;
-        background-image: url("/Resources/Content\ Resources/Images/1.jpg");
+        background-image: url("Resources/Content\ Resources/Images/1.jpg");
         background-size: 100%;
         background-repeat: no-repeat;
         animation: NextImage 30s linear infinite;
@@ -31,19 +31,20 @@
       }
       @keyframes NextImage {
         0% {
-          background-image: url("/Resources/Content Resources/Images/1.jpg");
+          background-image: url("Resources/ContentResources/Images/1.jpg");
         }
         25% {
-          background-image: url("/Resources/Content Resources/Images/2.jpg");
+          background-image: url("Resources/ContentResources/Images/2.jpg");
         }
         50% {
-          background-image: url("/Resources/Content Resources/Images/3.jpg");
+          background-image: url("Resources/ContentResources/Images/3.jpg");
         }
+
         75% {
-          background-image: url("/Resources/Content Resources/Images/4.jpg");
+          background-image: url("Resources/ContentResources/Images/4.jpg");
         }
         100% {
-          background-image: url("/Resources/Content Resources/Images/5.jpg");
+          background-image: url("Resources/ContentResources/Images/5.jpg");
         }
       }
     </style>
@@ -52,23 +53,23 @@
   <body>
     <header>
       <nav class="NavBar">
-        <a href="/index.html"
+        <a href="index.html"
           ><img
             id="NavBarLogo"
-            src="/Resources/Content Resources/MunchingFood.png"
+            src="Resources/ContentResources/MunchingFood.png"
             alt="Munching Food Logo!"
         /></a>
         <ul id="NavBarUL">
           <li style="border-bottom: 2px dashed white">
-            <a href="/index.html">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li>
-            <a href="/Resources/Recipes.html">Recipes</a>
+            <a href="Recipes.html">Recipes</a>
           </li>
           <li>
-            <a href="/Resources/About.html">About</a>
+            <a href="About.html">About</a>
           </li>
-          <li><a href="/Resources/Contact.html">Contact</a></li>
+          <li><a href="Contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="BtnContainer">
@@ -271,20 +272,22 @@
           </div>
         </div>
       </section>
-      <section id="SecChefs">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed culpa
-        explicabo, quo inventore voluptatum quam, quos quaerat mollitia possimus
-        fugit quasi totam accusamus tempora a hic! Nulla cupiditate sequi
-        ratione.
-      </section>
       <!-- Cards End Here! -->
+      <section id="SecChefs">
+        <h2>Some of the best Chefs Together!</h2>
+        <div id="TopChefs">s</div>
+      </section>
     </main>
     <!-- Main content Ends Here! -->
 
     <footer>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum commodi,
-      in animi voluptatibus eaque, at impedit quae, unde a quisquam quidem.
-      Quaerat a maiores inventore fugiat cum obcaecati, quod quia!
+      <div id="Company">
+        <h1
+          style="color: chartreuse; font-size: larger; font-family: monospace"
+        >
+          Powered by Infinity Algorithms {&infin;}
+        </h1>
+      </div>
     </footer>
     <!-- Footer Ends Here! -->
   </body>
